--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.shian.shianlife"
-    android:versionCode="6"
+    android:versionCode="8"
     android:versionName="1.4">
 
     <uses-sdk
@@ -36,6 +36,7 @@
     <uses-permission android:name="baidu.push.permission.WRITE_PUSHINFOPROVIDER.com.shian.shianlife" />
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
 
+    <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
     <permission
         android:name="baidu.push.permission.WRITE_PUSHINFOPROVIDER.com.shian.shianlife"
         android:protectionLevel="normal" />
@@ -52,18 +53,18 @@
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <activity
             android:name=".activity.ShowActivity"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity
@@ -250,7 +251,6 @@
         <!-- push应用定义消息receiver声明 -->
         <receiver android:name=".common.push.MyPushMessageReceiver">
             <intent-filter>
-
                 <!-- 接收push消息 -->
                 <action android:name="com.baidu.android.pushservice.action.MESSAGE" />
                 <!-- 接收bind,unbind,fetch,delete等反馈消息 -->
@@ -284,7 +284,7 @@
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.PACKAGE_REMOVED" />
-                kta android:scheme="package" />
+                <data android:scheme="package" />
             </intent-filter>
         </receiver>
 
@@ -303,9 +303,9 @@
         <!-- 适配Android N系统必需的ContentProvider声明，写权限包含应用包名 -->
         <provider
             android:name="com.baidu.android.pushservice.PushInfoProvider"
-            android:authorities="com.baidu.push.example.bdpush"
+            android:authorities="com.shian.shianlife.bdpush"
             android:exported="true"
-            android:writePermission="baidu.push.permission.WRITE_PUSHINFOPROVIDER.com.baidu.push.example" />
+            android:writePermission="baidu.push.permission.WRITE_PUSHINFOPROVIDER.com.shian.shianlife" />
 
         <!-- 在百度开发者中心查询应用的API Key -->
         <meta-data
