--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="21" />
 
-    <uses-permission android:name="android.permission.RESTART_PACKAGES"></uses-permission>
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.RESTART_PACKAGES" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -39,6 +39,12 @@
     <uses-permission android:name="baidu.push.permission.WRITE_PUSHINFOPROVIDER.com.shian.shianlife" />
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
+
+    <!-- 来电消音 -->
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <!-- 摄影机 -->
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <permission
         android:name="baidu.push.permission.WRITE_PUSHINFOPROVIDER.com.shian.shianlife"
@@ -327,7 +333,7 @@
             android:value="cSdvjz7iT4TcRhIiRv2e6CERLuRXa9uY" />
 
         <activity
-            android:name=".activity.RoutePlanActivity"
+            android:name=".activity.map.RoutePlanActivity"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait" />
         <activity
@@ -352,7 +358,7 @@
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.MapLocation"
+            android:name=".activity.map.MapLocation"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait" />
         <activity
@@ -386,8 +392,13 @@
             android:name=".activity.cemetery.MoreInfoDetailsActivity"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan|stateHidden"></activity>
-      <service android:name=".service.PushService"></service>
+            android:windowSoftInputMode="adjustPan|stateHidden" />
+
+        <activity android:name=".activity.map.BNDemoGuideActivity"></activity>
+        <activity android:name=".activity.map.BNDemoMainActivity"></activity>
+
+        <service android:name=".service.PushService" />
+
         <receiver android:name=".common.push.MyPushReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -395,6 +406,7 @@
                 <action android:name="android.intent.action.PACKAGE_RESTARTED" />
             </intent-filter>
         </receiver>
+
     </application>
 
 </manifest>
