--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'android-apt'
 android {
     signingConfigs {
     }
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion "23.0.3"
     aaptOptions.cruncherEnabled = false
     aaptOptions.useNewCruncher = false
@@ -51,7 +51,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:appcompat-v7:25+'
     compile 'com.loopj.android:android-async-http:1.4.6'
     apt 'com.jakewharton:butterknife:6.0.0'
     compile 'com.google.code.gson:gson:2.3.1'
@@ -61,13 +61,17 @@ dependencies {
     compile 'com.google.zxing:core:3.2.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:recyclerview-v7:24.2.0'
-    compile 'com.android.support:support-v4:24.2.0'
     compile 'com.chosen.kf5sdk:kf5sdklibrary:1.3.1'
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.commit451:PhotoView:1.2.4'
     compile 'com.isseiaoki:simplecropview:1.0.13'
     compile 'me.leolin:ShortcutBadger:1.1.13@aar'//通知图标数量
+
+    compile 'com.android.support:recyclerview-v7:25+'
+    compile 'com.android.support:support-v4:25+'
+//    compile "com.daimajia.swipelayout:library:1.2.0@aar"
+    compile project(':librarys:AndroidSwipeLayout')
+
     compile files('libs/bugly_crash_release__2.1.5.jar')
     compile files('libs/pushservice-5.0.0.66.jar')
     compile project(':librarys:cptr')
@@ -75,7 +79,7 @@ dependencies {
     compile project(':librarys:viewpagerIndicator')
     compile project(':librarys:cycleViewPager')
     compile project(':librarys:dateTimerSelector')
-    compile project(':librarys:AndroidSwipeLayout')
+
     compile project(':librarys:ImageSelector')
     compile files('libs/butterknife-6.0.0.jar')
     compile files('libs/xUtils-2.6.14.jar')
