--- a/librarys/ImageSelector/build.gradle
+++ b/librarys/ImageSelector/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '25.0.1'
 
     defaultConfig {
         minSdkVersion 15
