--- a/librarys/viewpagerTranform/build.gradle
+++ b/librarys/viewpagerTranform/build.gradle
@@ -24,7 +24,7 @@ version = VERSION_NAME
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '25.0.1'
 
     defaultConfig {
         minSdkVersion 13
