--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.shian.shianlife"
-    android:versionCode="8"
-    android:versionName="1.4">
+    android:versionCode="9"
+    android:versionName="1.5">
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -395,7 +395,13 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity android:name=".activity.map.BNDemoGuideActivity" />
-        <activity android:name=".activity.map.BNDemoMainActivity" />
+        <activity android:name=".activity.map.BNDemoMainActivity" >
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
 
         <service android:name=".service.PushService" />
         <service android:name=".service.UpDataService" />
