--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,14 +68,14 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.commit451:PhotoView:1.2.4'
     compile 'com.isseiaoki:simplecropview:1.0.13'
-    compile 'me.leolin:ShortcutBadger:1.1.13@aar'//通知图标数量
-    compile 'com.yinglan.scrolllayout:scrolllayout:1.0.0'//上拉抽屉
-
+    compile 'me.leolin:ShortcutBadger:1.1.13@aar'
+    //通知图标数量
+    compile 'com.yinglan.scrolllayout:scrolllayout:1.0.0'
+    //上拉抽屉
     compile 'com.android.support:recyclerview-v7:23+'
     compile 'com.android.support:support-v4:23+'
-//    compile "com.daimajia.swipelayout:library:1.2.0@aar"
+    //    compile "com.daimajia.swipelayout:library:1.2.0@aar"
     compile project(':librarys:AndroidSwipeLayout')
-
     compile files('libs/bugly_crash_release__2.1.5.jar')
     compile files('libs/pushservice-5.0.0.66.jar')
     compile project(':librarys:cptr')
@@ -83,7 +83,6 @@ dependencies {
     compile project(':librarys:viewpagerIndicator')
     compile project(':librarys:cycleViewPager')
     compile project(':librarys:dateTimerSelector')
-
     compile project(':librarys:ImageSelector')
     compile files('libs/butterknife-6.0.0.jar')
     compile files('libs/xUtils-2.6.14.jar')
@@ -96,8 +95,6 @@ dependencies {
     compile files('libs/baidumapapi_radar_v4_1_1.jar')
     compile files('libs/baidumapapi_search_v4_1_1.jar')
     compile files('libs/baidumapapi_util_v4_1_1.jar')
-
-//    compile 'com.google.android:multidex:0.1'
-
-
+    //    compile 'com.google.android:multidex:0.1'
+    compile project(':PullToRefresh')
 }
