--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -453,6 +453,10 @@
         <activity
             android:name=".activity.MyCollectionActivity"
             android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.CustomerHelpActivity"
+            android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait"></activity>
     </application>
 
