APP地图选择制作

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -465,6 +465,10 @@
         <activity
             android:name=".activity.HotIssueListActivity"
             android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.map.NewRoutePlanOtherActivity"
+            android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait"></activity>
     </application>
 
