--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,29 +53,9 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.loopj.android:android-async-http:1.4.6'
-    apt 'com.jakewharton:butterknife:6.0.0'
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'org.codehaus.jackson:jackson-core-asl:1.9.11'
-    compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.11'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    compile 'com.google.zxing:core:3.2.0'
-    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.chosen.kf5sdk:kf5sdklibrary:1.3.1'
-    compile 'com.github.bumptech.glide:glide:3.6.1'
-    compile 'com.commit451:PhotoView:1.2.4'
-    compile 'com.isseiaoki:simplecropview:1.0.13'
-    compile 'me.leolin:ShortcutBadger:1.1.13@aar'
     //通知图标数量
-    compile 'com.yinglan.scrolllayout:scrolllayout:1.0.0'
     //上拉抽屉
-    compile 'com.android.support:recyclerview-v7:23+'
-    compile 'com.android.support:support-v4:23+'
     //    compile "com.daimajia.swipelayout:library:1.2.0@aar"
-    compile 'com.github.zcweng:switch-button:0.0.2@aar'
     //滑动开关
     compile project(':librarys:AndroidSwipeLayout')
     compile files('libs/bugly_crash_release__2.1.5.jar')
@@ -99,4 +79,25 @@ dependencies {
     //    compile 'com.google.android:multidex:0.1'
     compile project(':PullToRefresh')
     compile project(':cptr')
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.loopj.android:android-async-http:1.4.6'
+    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'org.codehaus.jackson:jackson-core-asl:1.9.11'
+    compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.11'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'com.google.zxing:core:3.2.0'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.chosen.kf5sdk:kf5sdklibrary:1.3.1'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'com.commit451:PhotoView:1.2.4'
+    compile 'com.isseiaoki:simplecropview:1.0.13'
+    compile 'me.leolin:ShortcutBadger:1.1.13@aar'
+    compile 'com.yinglan.scrolllayout:scrolllayout:1.0.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.github.zcweng:switch-button:0.0.2@aar'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
+    apt 'com.jakewharton:butterknife:6.0.0'
 }
