--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -472,7 +472,7 @@
             android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.newcemetery.InfoDetailsActivity"
-            android:configChanges="orientation|screenSize"
+            android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustUnspecified|stateHidden"></activity>
         <activity
