--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -519,7 +519,10 @@
             android:name=".activity.goods.GoodsQueryActivity"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait" />
-        <activity android:name=".activity.goods.GoodsDetailsActivity"></activity>
+        <activity
+            android:name=".activity.goods.GoodsDetailsActivity"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
