--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -518,11 +518,13 @@
         <activity
             android:name=".activity.goods.GoodsQueryActivity"
             android:configChanges="orientation|screenSize"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateHidden"  />
         <activity
             android:name=".activity.goods.GoodsDetailsActivity"
             android:configChanges="orientation|screenSize"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"
+  ></activity>
     </application>
 
 </manifest>
