--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -519,12 +519,15 @@
             android:name=".activity.goods.GoodsQueryActivity"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan|stateHidden"  />
+            android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity
             android:name=".activity.goods.GoodsDetailsActivity"
             android:configChanges="orientation|screenSize"
-            android:screenOrientation="portrait"
-  ></activity>
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.goods.GoodsShoppingCartActivity"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
