--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -542,6 +542,11 @@
             android:name=".activity.goods.GoodsOrderServiceInfoActivity"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustUnspecified|stateHidden" />
+        <activity
+            android:name=".activity.goods.GoodsOrderInvoiceInfoActivity"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustUnspecified|stateHidden"></activity>
     </application>
 
