订单列表 及提交订单

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -552,7 +552,8 @@
             android:name=".activity.goods.GoodsOrderSubmitActivity"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustUnspecified|stateHidden"></activity>
+            android:windowSoftInputMode="adjustUnspecified|stateHidden" />
+        <activity android:name=".activity.goods.GoodsOrderPayActivity"></activity>
     </application>
 
 </manifest>
