订单流程，线下支付

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,7 @@ dependencies {
     compile 'in.srain.cube:ptr-load-more:1.0.6'
     compile 'com.android.support:design:23.1.0'
     compile 'com.android.support:multidex:1.0.0'
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife:6.0.0'
 }
