增加套餐商品列表

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,13 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
+//定义时间
+def releaseTime() {
+    return new Date().format("yyyyMMdd", TimeZone.getTimeZone("UTC"))
+}
+//设置发布的名称
+def getAppName() {
+    return "圆满人生"
+}
 
 android {
     signingConfigs {
@@ -49,6 +57,19 @@ android {
         }
     }
     useLibrary 'org.apache.http.legacy'
+
+    android.applicationVariants.all {
+        variant ->
+            variant.outputs.each {
+                output ->
+                    def outputFile = output.outputFile
+                    if (outputFile != null && outputFile.name.endsWith('.apk')) {
+                        //这里修改apk文件名
+                        def fileName = outputFile.name.replace("app-release", getAppName() + "_" + releaseTime() + "_VersionCode${defaultConfig.versionCode}_VersionName${defaultConfig.versionName}")
+                        output.outputFile = new File(outputFile.parent, fileName)
+                    }
+            }
+    }
 }
 
 dependencies {
