订单详情与订单生成增加套餐

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,11 +64,7 @@
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".activity.ShowActivity"
@@ -561,11 +557,12 @@
             android:windowSoftInputMode="adjustUnspecified|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:scheme="wx5ab2d177a39c8249" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activity.goods.GoodsOrderPayCallBackActivity"
             android:configChanges="orientation|screenSize"
@@ -580,11 +577,12 @@
             android:windowSoftInputMode="adjustUnspecified|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:scheme="wx5ab2d177a39c8249" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".wxapi.WXPayEntryActivity"
             android:configChanges="orientation|screenSize"
@@ -594,18 +592,17 @@
             android:windowSoftInputMode="adjustUnspecified|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:scheme="wx5ab2d177a39c8249" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activity.PicShowActivity"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustUnspecified|stateHidden">
-
-        </activity>
+            android:windowSoftInputMode="adjustUnspecified|stateHidden"></activity>
 
         <!-- 您从百度网站获取的APP KEY，根据实际您的APP申请的APP_KEY进行修改 -->
         <meta-data
@@ -615,7 +612,18 @@
         <activity
             android:name=".activity.FindActivity"
             android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.goods.GoodsDetailsListActivity"
+            android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait"></activity>
+        <activity android:name=".MaintActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
